src/syntax/snapshots/simpl__syntax__test__let_binding.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Let {
    bindings: [
        (
            "x",
            Lit {
                val: Int(
                    5,
                ),
            },
        ),
    ],
    body: Var {
        name: "x",
    },
}
