src/syntax/snapshots/simpl__syntax__test__literal-2.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Float(
        123.456,
    ),
}
