src/syntax/snapshots/simpl__syntax__test__literal-3.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Float(
        0.0000000123456,
    ),
}
