src/syntax/snapshots/simpl__syntax__test__literal-4.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Bool(
        false,
    ),
}
