src/syntax/snapshots/simpl__syntax__test__literal.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Int(
        123,
    ),
}
